portfolio css fixed

--- a/responsive web design projects/portfolio/css/portfolio.css
+++ b/responsive web design projects/portfolio/css/portfolio.css
@@ -83,7 +83,7 @@ html, body {
   
   @media only screen and (max-width: 500px) {
     nav ul {
-      text-slign: center;
+      text-align: center;
     }
     nav ul li {
       margin: 20px;
